complete micrograd from scratch exercise

--- a/micrograd_from_scratch.ipynb
+++ b/micrograd_from_scratch.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
     "        out._backward = _backward\n",
     "        return out\n",
     "    \n",
-    "    def __radd__(self, other): #other * self\n",
+    "    def __radd__(self, other): #other + self\n",
     "        return self + other\n",
     "\n",
     "    def __mul__(self, other):\n",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,11 +1408,541 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7071066904050358\n",
+      "---\n",
+      "x2 0.5000001283844369\n",
+      "w2 0.0\n",
+      "x1 -1.5000003851533106\n",
+      "w1 1.0000002567688737\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how to do the same thing in Pytorch\n",
+    "import torch\n",
+    "\n",
+    "x1 = torch.Tensor([2.0]).double(); x1.requires_grad = True\n",
+    "x2 = torch.Tensor([0.0]).double(); x2.requires_grad = True\n",
+    "w1 = torch.Tensor([-3.0]).double(); w1.requires_grad = True\n",
+    "w2 = torch.Tensor([1.0]).double(); w2.requires_grad = True\n",
+    "b = torch.Tensor([6.8813735870195432]).double(); b.requires_grad = True\n",
+    "n = x1*w1 + x2*w2 + b\n",
+    "o = torch.tanh(n)\n",
+    "\n",
+    "print(o.data.item())\n",
+    "o.backward()\n",
+    "\n",
+    "print('---')\n",
+    "print('x2', x2.grad.item())\n",
+    "print('w2', w2.grad.item())\n",
+    "print('x1', x1.grad.item())\n",
+    "print('w1', w1.grad.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.], dtype=torch.float64, requires_grad=True)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.7071], dtype=torch.float64, grad_fn=<TanhBackward0>)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7071066904050358"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Neuron:\n",
+    "\n",
+    "    def __init__(self, nin):\n",
+    "        self.w = [Value(random.uniform(-1,1)) for _ in range(nin)]\n",
+    "        self.b = Value(random.uniform(-1,1))\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        # w * x + b\n",
+    "        # forward pass\n",
+    "        act = sum((wi*xi for wi, xi in zip(self.w, x)), self.b)\n",
+    "        out = act.tanh()\n",
+    "        return out\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return self.w + [self.b]\n",
+    "    \n",
+    "class Layer:\n",
+    "\n",
+    "    def __init__(self, nin, nout):\n",
+    "        self.neurons = [Neuron(nin) for _ in range(nout)]\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        outs = [n(x) for n in self.neurons]\n",
+    "        return outs[0] if len(outs) == 1 else outs\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return [p for neuron in self.neurons for p in neuron.parameters()]\n",
+    "        # params = []\n",
+    "        # for neuron in self.neurons:\n",
+    "        #     ps = neuron.parameters()\n",
+    "        #     params.extend(ps)\n",
+    "        # return params\n",
+    "    \n",
+    "class MLP:\n",
+    "\n",
+    "    def __init__(self, nin, nouts):\n",
+    "        sz = [nin] + nouts\n",
+    "        self.layers = [Layer(sz[i], sz[i+1]) for i in range(len(nouts))]\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return [p for layer in self.layers for p in layer.parameters()]        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=-0.43154511300331316)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "x = [2.0, 3.0, -1.0]\n",
+    "n = MLP(3, [4, 4, 1])\n",
+    "n(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(n.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw_dot(n(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Value(data=0.8735527994058015),\n",
+       " Value(data=-0.9254735993982846),\n",
+       " Value(data=-0.9775810310972441),\n",
+       " Value(data=0.8607503442905128)]"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xs = [\n",
+    "    [2.0, 3.0, -1.0],\n",
+    "    [3.0, -1.0, 0.5],\n",
+    "    [0.5, 1.0, 1.0],\n",
+    "    [1.0, 1.0, -1.0],\n",
+    "]\n",
+    "ys = [1.0, -1.0, -1.0, 1.0] # desired targets\n",
+    "ypred = [n(x) for x in xs]\n",
+    "ypred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=6.543004144649595)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss = sum([(yout - ygt)**2 for ygt, yout in zip(ys, ypred)]) \n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.10365115110081655"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.layers[0].neurons[0].w[0].grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.7845143371895307"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.layers[0].neurons[0].w[0].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#draw_dot(loss)\n",
+    "for p in n.parameters():\n",
+    "    p.data += -0.01 * p.grad # minimize loss, gradients point in direction of increasing the loss, so take the negative to decrease loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.7834778256785225"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.layers[0].neurons[0].w[0].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=6.235374530546229)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ypred = [n(x) for x in xs]\n",
+    "loss = sum([(yout - ygt)**2 for ygt, yout in zip(ys, ypred)]) \n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=0.04262197765229067)"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# repeat\n",
+    "# forward pass\n",
+    "ypred = [n(x) for x in xs]\n",
+    "loss = sum([(yout - ygt)**2 for ygt, yout in zip(ys, ypred)]) \n",
+    "\n",
+    "\n",
+    "# backward pass\n",
+    "loss.backward()\n",
+    "\n",
+    "#update\n",
+    "for p in n.parameters():\n",
+    "    p.data += -0.0001 * p.grad \n",
+    "\n",
+    "\n",
+    "loss\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Value(data=0.8716477864813891),\n",
+       " Value(data=-0.9252103193818162),\n",
+       " Value(data=-0.9774869047614086),\n",
+       " Value(data=0.858411331127905)]"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ypred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=0.9367815078498324)"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [2.0, 3.0, -1.0]\n",
+    "n = MLP(3, [4, 4, 1])\n",
+    "n(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reinitialize neural net\n",
+    "xs = [\n",
+    "    [2.0, 3.0, -1.0],\n",
+    "    [3.0, -1.0, 0.5],\n",
+    "    [0.5, 1.0, 1.0],\n",
+    "    [1.0, 1.0, -1.0],\n",
+    "]\n",
+    "ys = [1.0, -1.0, -1.0, 1.0] # desired targets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.0006182886360056295\n",
+      "1 0.0006164090487989448\n",
+      "2 0.0006145407154836704\n",
+      "3 0.0006126835357609849\n",
+      "4 0.0006108374105173697\n",
+      "5 0.0006090022418071514\n",
+      "6 0.0006071779328354102\n",
+      "7 0.000605364387941157\n",
+      "8 0.0006035615125807549\n",
+      "9 0.0006017692133117416\n",
+      "10 0.0005999873977768511\n",
+      "11 0.0005982159746883165\n",
+      "12 0.0005964548538124536\n",
+      "13 0.0005947039459545393\n",
+      "14 0.0005929631629439268\n",
+      "15 0.000591232417619399\n",
+      "16 0.0005895116238147697\n",
+      "17 0.0005878006963447944\n",
+      "18 0.0005860995509912297\n",
+      "19 0.0005844081044892142\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in range(20):\n",
+    "    # forward pass\n",
+    "    ypred = [n(x) for x in xs]\n",
+    "    loss = sum([(yout - ygt)**2 for ygt, yout in zip(ys, ypred)]) \n",
+    "\n",
+    "    # backward pass\n",
+    "    for p in n.parameters(): # equivalent to zero grad in pytorch\n",
+    "        p.grad = 0.0\n",
+    "    loss.backward()\n",
+    "\n",
+    "    #update\n",
+    "    for p in n.parameters():\n",
+    "        p.data += -0.1 * p.grad \n",
+    "\n",
+    "    print(k, loss.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Value(data=0.9918745426486519),\n",
+       " Value(data=-0.9903647233411278),\n",
+       " Value(data=-0.9852643981410301),\n",
+       " Value(data=0.9855636386550644)]"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ypred"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# how to do the same thing in Pytorch\n"
+    "# neural networks are mathematical expressions\n"
    ]
   }
  ],
