create bigram model

--- a/micrograd_from_scratch.ipynb
+++ b/micrograd_from_scratch.ipynb
@@ -9,7 +9,12 @@
     "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "# https://fullstackdeeplearning.com/\n",
+    "# https://llava-vl.github.io/\n",
+    "# https://github.com/openai/CLIP\n",
+    "# "
    ]
   },
   {
